--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Create Bootable Image
+name: Create and Deploy Bootable Image
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build_image:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,3 +19,15 @@ jobs:
       - name: Build Bootable Image
         run: |
           packer build packer.json
+
+  deploy_image:
+    runs-on: ubuntu-latest
+
+    needs: build_image
+
+    steps:
+      - name: Upload Bootable Image
+        uses: actions/upload-artifact@v2
+        with:
+          name: bootable-image
+          path: output_directory/*.qcow2
