--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Create and Deploy Bootable Image
+name: Build Docker Image and Create Bootable Image
 
 on:
   push:
@@ -6,8 +6,20 @@ on:
       - main
 
 jobs:
-  build_image:
+  build_docker_image:
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Build Docker Image
+        run: docker build -t your_docker_image .
+
+  build_bootable_image:
+    runs-on: ubuntu-latest
+
+    needs: build_docker_image
 
     steps:
       - name: Checkout Repository
@@ -19,15 +31,3 @@ jobs:
       - name: Build Bootable Image
         run: |
           packer build packer.json
-
-  deploy_image:
-    runs-on: ubuntu-latest
-
-    needs: build_image
-
-    steps:
-      - name: Upload Bootable Image
-        uses: actions/upload-artifact@v2
-        with:
-          name: bootable-image
-          path: output_directory/*.qcow2
