--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker Image
-        run: docker build -t your_docker_image .
+        run: docker build -t your_docker_image ../../.
 
   build_bootable_image:
     runs-on: ubuntu-latest
