--- a/.env_template
+++ b/.env_template
@@ -1,10 +1,6 @@
-
-GF_SECURITY_ADMIN_PASSWORD=
-GF_USERS_ALLOW_SIGN_UP=
-GF_SERVER_DOMAIN=
-GF_SMTP_ENABLED=
-GF_SMTP_HOST=
-GF_SMTP_USER=
-GF_SMTP_PASSWORD=
-GF_SMTP_FROM_ADDRESS=
-MYSQL_ROOT_PASSWORD=
+GF_USERS_ALLOW_SIGN_UP=false
+GF_SERVER_DOMAIN=apx
+GF_SMTP_ENABLED=false
+GF_SMTP_HOST=localhost
+GF_SMTP_USER=user
+GF_SMTP_FROM_ADDRESS=temp@localhost
