--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Copy Example .env
+        run: cp .env_template .env
+
+      - name: Set Environment Variables
+        run: |
+          echo "GF_SECURITY_ADMIN_PASSWORD=$GF_SECURITY_ADMIN_PASSWORD" >> .env
+          echo "GF_SMTP_PASSWORD=$GF_SMTP_PASSWORD" >> .env
+          echo "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD" >> .env
+
       - name: Set up Packer
         uses: hashicorp/setup-packer@main
 
