--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Set Up QEMU
+        run: sudo apt-get install qemu-system-x86 qemu-user-static
+
       - name: Copy Example .env
         run: cp .env_template .env
 
